add the basic gameloops of the game (variable and fixed)

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,15 @@
 
 <body>
   <h1>Nova</h1>
+  <section>
+    <h1>Metrics</h1>
+    <div id="metrics">
+      <ul>
+        <li>fps: N/A</li>
+        <li>ms: N/A</li>
+      </ul>
+    </div>
+  </section>
 </body>
 
 </html>
