extract the setupCanvas method out of NovaEngine, and refactor UI debug strings

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
         </div>
       </div>
     </section>
-    <section id="game-canvas-container" class="game-section" style="display: none;">
+    <section id="nova_container" class="game-section" style="display: none;">
     </section>
   </div>
   <footer class="main-footer">
