create and feed the Player component with the player's username

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>Nova</title>
   <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-  <script type="module" src="main.js"></script>
+  <script type="module" src="main.ts"></script>
 </head>
 
 <body class="full-height">
@@ -27,7 +27,7 @@
         <h1 class="title">Nova</h1>
         <span class="subtitle">Real-time multiplayer server-scaling simulation</span>
         <div class="play-form">
-          <input type="text" placeholder="Your username goes here...">
+          <input type="text" placeholder="Your username goes here..." id="nova_player-name-input">
           <a href="" class="btn" id="play-btn">Play Now</a>
         </div>
       </div>
