setup the game manager

--- a/src/index.html
+++ b/src/index.html
@@ -43,8 +43,7 @@
             <span class="error" id="nova-ui__login-error"></span>
           </div>
         </div>
-        <div id="nova-ui__loading-screen" class="nova-ui__screen">Loading...</div>
-        <div id="nova-ui__hud-screen" class="nova-ui__screen">
+        <div id="nova-ui__playing-screen" class="nova-ui__screen">
           <span id="nova-ui__username-text"></span>
         </div>
         <div id="nova-ui__disconnected-screen" class="nova-ui__screen">Disconnected.</div>
