setup disconection flow

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
           <div class="nova-ui__login-block">
             <div>
               <input type="text" placeholder="Username" id="nova-ui__username-input">
-              <button class="btn" id="nova-ui__login-button">Play</button>
+              <button class="btn loading" id="nova-ui__login-button">Play</button>
             </div>
             <span class="error" id="nova-ui__login-error"></span>
           </div>
@@ -46,7 +46,9 @@
         <div id="nova-ui__playing-screen" class="nova-ui__screen">
           <span id="nova-ui__username-text"></span>
         </div>
-        <div id="nova-ui__disconnected-screen" class="nova-ui__screen">Disconnected.</div>
+        <div id="nova-ui__disconnected-screen" class="nova-ui__screen nova-ui__screen--centered">
+          <button class="btn" id="nova-ui__reconnect-button">Reconnect</button>
+        </div>
         <canvas id="nova_render" width="960" height="540"></canvas>
       </div>
     </section>
