reintegrate local player movement

--- a/src/index.html
+++ b/src/index.html
@@ -40,11 +40,11 @@
               <input type="text" placeholder="Username" id="nova-ui__username-input">
               <button class="btn loading" id="nova-ui__login-button">Play</button>
             </div>
-            <span class="error" id="nova-ui__login-error"></span>
+            <span class="error text" id="nova-ui__login-error"></span>
           </div>
         </div>
         <div id="nova-ui__playing-screen" class="nova-ui__screen">
-          <span id="nova-ui__username-text"></span>
+          <span class="text uppercase" id="nova-ui__username-text"></span>
         </div>
         <div id="nova-ui__disconnected-screen" class="nova-ui__screen nova-ui__screen--centered">
           <button class="btn" id="nova-ui__reconnect-button">Reconnect</button>
